--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     src: url(../fonts/Mulish/Mulish-Regular.woff) format('woff');
     font-weight: 400;
     font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -17,6 +18,7 @@
     src: url(../fonts/Mulish/Mulish-Medium.woff) format('woff');
     font-weight: 500;
     font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -25,6 +27,7 @@
     src: url(../fonts/Mulish/Mulish-SemiBold.woff) format('woff');
     font-weight: 600;
     font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -33,6 +36,7 @@
     src: url(../fonts/Mulish/Mulish-Bold.woff) format('woff');
     font-weight: 700;
     font-style: normal;
+	font-display: swap;
 }
 
 main {
