--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@
 * Browsers: last 5 version
 */
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.12,
+* Autoprefixer: v10.4.4
+* Browsers: last 5 version
+*/
+
 @charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 @-webkit-keyframes disableBreakpointAnimation{0%,to{visibility:hidden;opacity:0}}@keyframes disableBreakpointAnimation{0%,to{visibility:hidden;opacity:0}}body,html{min-height:100%}html{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-tap-highlight-color:transparent;-webkit-text-size-adjust:100%;min-width:320px;line-height:1.15}body{width:100%;height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;margin:0;word-break:break-word;font-family:-apple-system,BlinkMacSystemFont,"Roboto","Ubuntu","Droid Sans","Helvetica Neue","Arial",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:16px;line-height:1.5;text-align:left;color:#1a1a1a;background-color:#fff;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}details,main{display:block}h1{margin:.67em 0;font-size:40px}hr{-webkit-box-sizing:content-box;box-sizing:content-box;height:0;margin-top:2em;margin-bottom:2em;border:0;border-top:1px solid #b3b3b3;overflow:visible}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{color:#0275d9;background-color:transparent;-webkit-transition:color .3s;-o-transition:color .3s;transition:color .3s}abbr[title]{border-bottom:none;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:.75em}sub,sup{line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15}optgroup{margin:0}select{text-transform:none}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto;resize:vertical}[type=checkbox],[type=radio],legend{-webkit-box-sizing:border-box;box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}[hidden],template{display:none}*,::after,::before{-webkit-box-sizing:inherit;box-sizing:inherit}*{-webkit-tap-highlight-color:transparent}h2{font-size:32px}h3{font-size:24px}h4{font-size:18px}h5,h6{font-size:16px}address,blockquote,dl,figure,ol,p,pre,table,ul{margin-top:0;margin-bottom:1em}ol,ul{padding-left:1.5em}p{-webkit-hyphens:auto;-ms-hyphens:auto;hyphens:auto;hyphenate-limit-chars:6 3 3;hyphenate-limit-lines:2;hyphenate-limit-last:always;hyphenate-limit-zone:8%}address{font-style:normal}ol ol,ol ul,ul ol,ul ul{margin-top:0;margin-bottom:0}li{line-height:inherit}a:focus,a:hover{color:#014c8d}img,video{display:block;max-width:100%;height:auto}svg{fill:currentColor}a svg,button svg{pointer-events:none}svg:not(:root){overflow:hidden}sub,sup{font-size:.75em}[tabindex='-1']:focus{outline:0!important}input:-webkit-autofill{-webkit-box-shadow:inset 0 0 0 1000px #fff;box-shadow:inset 0 0 0 1000px #fff;-webkit-text-fill-color:#000}[role=button]{cursor:pointer}[role=button],a,button,input,label,select,textarea{-ms-touch-action:manipulation;touch-action:manipulation;margin:0}button,input{overflow:visible;text-transform:none}html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{padding:0;border-style:none}input[type=date],input[type=datetime-local],input[type=month],input[type=time]{-webkit-appearance:listbox}input,select,textarea{border-radius:0}input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{opacity:1}input::-moz-placeholder,textarea::-moz-placeholder{opacity:1}input:-ms-input-placeholder,input::-ms-input-placeholder,textarea:-ms-input-placeholder,textarea::-ms-input-placeholder{opacity:1}input::-webkit-input-placeholder, textarea::-webkit-input-placeholder{opacity:1}input::-moz-placeholder, textarea::-moz-placeholder{opacity:1}input:-ms-input-placeholder, textarea:-ms-input-placeholder{opacity:1}input::-ms-input-placeholder, textarea::-ms-input-placeholder{opacity:1}input::placeholder,textarea::placeholder{opacity:1}input:invalid,textarea:invalid{-webkit-box-shadow:none;box-shadow:none}input::-ms-clear,input::-ms-reveal{display:none}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration,input[type=search]::-webkit-search-results-button,input[type=search]::-webkit-search-results-decoration{-webkit-appearance:none;appearance:none}input::-webkit-inner-spin-button,input::-webkit-outer-spin-button{margin:0;-webkit-appearance:none;appearance:none}input[type=number]{-webkit-appearance:textfield;-moz-appearance:textfield;appearance:textfield}input:matches([type=email],[type=number],[type=password],[type=search],[type=tel],[type=text],[type=url]),select,textarea{-webkit-appearance:none;-moz-appearance:none;appearance:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:none;-moz-appearance:none;appearance:none}.visually-hidden{position:absolute;width:1px;height:1px;margin:-1px;clip:rect(0 0 0 0)}.wrapper,.wrapper--no-scrollbar{height:100vh;height:calc(var(--vh, 1vh)*100)}.wrapper{position:relative;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;overflow-x:hidden}.wrapper--no-scrollbar{-ms-overflow-style:none;scrollbar-width:none}.modal::-webkit-scrollbar,.wrapper--no-scrollbar::-webkit-scrollbar{display:none}.wrapper .footer,.wrapper .header{-ms-flex-negative:0;flex-shrink:0}.wrapper main{-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1}.scroll-lock{position:fixed;overflow-y:auto}.btn-reset{padding:0;background:0 0;border:0;cursor:pointer}.container{width:100%;max-width:1920px;margin:0 auto;padding:0 40px}.header{min-height:100px;padding:0 40px;background-color:#fff}.header,.header__wrapper{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.header a,.header p{color:#000}.header ul{margin:0 20px 0 60px;padding:0;list-style:none}.header ul li{margin-right:20px}.header .main-nav__toggle{display:none}.footer{min-height:100px;padding:0 60px;background-color:#fff}.header ul,.modal,.modal__wrapper{display:-webkit-box;display:-ms-flexbox;display:flex}.modal{top:0;right:0;bottom:0;left:0;z-index:1000;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;overflow-y:auto;background-color:rgba(0,0,0,.6);-webkit-transform:scale(1.2);-ms-transform:scale(1.2);transform:scale(1.2);visibility:hidden;opacity:0;pointer-events:none;-webkit-transition:opacity .6s cubic-bezier(.55,0,.1,1),visibility .6s cubic-bezier(.55,0,.1,1),-webkit-transform .6s cubic-bezier(.55,0,.1,1);transition:opacity .6s cubic-bezier(.55,0,.1,1),visibility .6s cubic-bezier(.55,0,.1,1),-webkit-transform .6s cubic-bezier(.55,0,.1,1);-o-transition:opacity .6s cubic-bezier(.55,0,.1,1),transform .6s cubic-bezier(.55,0,.1,1),visibility .6s cubic-bezier(.55,0,.1,1);transition:opacity .6s cubic-bezier(.55,0,.1,1),transform .6s cubic-bezier(.55,0,.1,1),visibility .6s cubic-bezier(.55,0,.1,1);transition:opacity .6s cubic-bezier(.55,0,.1,1),transform .6s cubic-bezier(.55,0,.1,1),visibility .6s cubic-bezier(.55,0,.1,1),-webkit-transform .6s cubic-bezier(.55,0,.1,1);-ms-overflow-style:none;scrollbar-width:none;position:fixed}.modal__wrapper{position:relative;-ms-flex-negative:0;flex-shrink:0;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:100%;min-height:100%;padding:60px 40px}.modal__overlay{position:absolute;top:0;left:0;width:100%;height:100%;cursor:pointer}.modal__content{position:relative;width:600px;padding:40px;background-color:#fff}.modal__close-btn{position:absolute;top:15px;right:15px}.modal--responsive .modal__content{width:100%}.modal--fit-content .modal__content{width:auto}.modal--no-scale{-webkit-transform:none;-ms-transform:none;transform:none}.modal--preload{-webkit-transition:none;-o-transition:none;transition:none}.modal--active{-webkit-transform:scale(1);-ms-transform:scale(1);transform:scale(1);visibility:visible;opacity:1;pointer-events:auto}.ts-btn,.ts-panel{border-radius:3px;-webkit-transition:all .3s ease;-o-transition:all .3s ease;transition:all .3s ease}.ts-panel{position:fixed;bottom:20px;left:20px;background-color:rgba(0,160,223,.5);z-index:999999999999;max-width:70%;padding:10px 10px 0}.ts-btn{border:0;padding:5px 10px;cursor:pointer;color:#fff;background:#e72e8b;background:-o-linear-gradient(86deg,#e72e8b 0%,#00a0df 100%);background:linear-gradient(4deg,#e72e8b 0%,#00a0df 100%);margin-right:10px;margin-bottom:10px}.ts-btn:hover{background:#e72e8b;background:-o-linear-gradient(194deg,#e72e8b 0%,#00a0df 100%);background:linear-gradient(256deg,#e72e8b 0%,#00a0df 100%)}.ts-btn:last-child{margin-right:0}.ts-console{position:fixed;padding:10px;border-radius:3px;background-color:rgba(0,160,223,.8);bottom:80px;left:20px;color:#fff;width:100%;max-width:900px;min-width:300px;white-space:pre;font-family:monospace;max-height:80vh;overflow-y:scroll}.ts-panel--close{width:50px;height:50px;border-radius:50%;background:-o-linear-gradient(86deg,#e72e8b 0%,#00a0df 100%);background:linear-gradient(4deg,#e72e8b 0%,#00a0df 100%)}.ts-panel--close:hover{background:-o-linear-gradient(194deg,#e72e8b 0%,#00a0df 100%);background:linear-gradient(256deg,#e72e8b 0%,#00a0df 100%)}.ts-panel--close .ts-btn,.ts-panel--close .ts-console{display:none}@media (min-width:1024px){a[href^='tel:']{white-space:nowrap;pointer-events:none;text-decoration:inherit;color:inherit}}@media (max-width:1439.98px){.container{padding:0 32px}}@media (max-width:1023.98px){.container{padding:0 24px}}@media (max-width:1000px){.ts-console{display:none}}@media (max-width:767.98px){.container{padding:0 16px}.container--no-padding{padding:0}.modal__wrapper{padding:60px 16px}.modal__content{width:100%;padding:20px}.modal--fit-content .modal__content{width:100%}}
@@ -49,6 +56,10 @@
 main {
 	max-width: 1440px;
 	margin: 0 auto;
+}
+
+.nav-toggle {
+	display: none;
 }
 
 .visually-hidden {
@@ -2111,6 +2122,8 @@ a.footer-phone-number {
 
 	nav {
 		position: relative;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
 		width: 100%;
 		height: 30px;
@@ -2119,11 +2132,14 @@ a.footer-phone-number {
 		padding: 0;
 		clip: auto;
 		overflow: auto;
-		order: -1;
+		-webkit-box-ordinal-group: 0;
+		    -ms-flex-order: -1;
+		        order: -1;
 		overflow: visible;
 	}
 
 	.nav-toggle {
+		display: block;
 		border: none;
 		height: 29px;
 		width: 21px;
@@ -2152,6 +2168,8 @@ a.footer-phone-number {
 		left: 0;
 		top: 10px;
 		background-color: #6386FF;
+		-webkit-transition: all 0.3s ease 0s;
+		-o-transition: all 0.3s ease 0s;
 		transition: all 0.3s ease 0s;
 	}
 
@@ -2160,17 +2178,23 @@ a.footer-phone-number {
 	}
 
 	.nav-toggle.nav-toggle--opened::before {
-		transform: rotate(45deg);
+		-webkit-transform: rotate(45deg);
+		    -ms-transform: rotate(45deg);
+		        transform: rotate(45deg);
 		top: 18px;
 	}
 	
 	.nav-toggle.nav-toggle--opened::after {
-		transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
+		    -ms-transform: rotate(-45deg);
+		        transform: rotate(-45deg);
 		top: 18px;
 	}
 
 	.nav-toggle.nav-toggle--opened >.nav-burger {
-		transform: scale(0);
+		-webkit-transform: scale(0);
+		    -ms-transform: scale(0);
+		        transform: scale(0);
 	}
 
 	.nav-wrapper {
